--- a/Calculator/ui/main.ui
+++ b/Calculator/ui/main.ui
@@ -74,7 +74,7 @@
            </spacer>
           </item>
           <item row="0" column="1">
-           <widget class="QPushButton" name="pushButton_42">
+           <widget class="QPushButton" name="pb_back">
             <property name="minimumSize">
              <size>
               <width>80</width>
@@ -87,7 +87,7 @@
            </widget>
           </item>
           <item row="0" column="2">
-           <widget class="QPushButton" name="pushButton_41">
+           <widget class="QPushButton" name="pb_clear">
             <property name="minimumSize">
              <size>
               <width>80</width>
